# Sliding-Puzzle-with-SDL2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: code-structure.drawio
include/: button.h  print.h  stopwatch.h  tile.h  userInterface.h
src/: button.cpp  main.cpp  print.cpp  stopwatch.cpp  tile.cpp  userInterface.cpp
